# thuban

./: .buildinfo  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  MANIFEST.in  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: ci.yaml  ci_fixed.yaml  publish.yaml
_sources/: index.rst.txt
_sources/autoapi/: index.rst.txt
_sources/autoapi/thuban/: index.rst.txt
_sources/autoapi/thuban/catalog/: index.rst.txt
_sources/autoapi/thuban/cli/: index.rst.txt
_sources/autoapi/thuban/distortion/: index.rst.txt
_sources/autoapi/thuban/error/: index.rst.txt
_sources/autoapi/thuban/pointing/: index.rst.txt
_sources/autoapi/thuban/simulate/: index.rst.txt
_sources/autoapi/thuban/util/: index.rst.txt
_sources/autoapi/thuban/visualize/: index.rst.txt
autoapi/: index.html
autoapi/thuban/: index.html
autoapi/thuban/catalog/: index.html
autoapi/thuban/cli/: index.html
autoapi/thuban/distortion/: index.html
autoapi/thuban/error/: index.html
autoapi/thuban/pointing/: index.html
autoapi/thuban/simulate/: index.html
autoapi/thuban/util/: index.html
autoapi/thuban/visualize/: index.html
docs/: conf.py
scripts/: prepare_reduced_hip.py
tests/: test_catalog.py  test_distortion.py  test_pointing.py  test_simulate.py  test_util.py
thuban/: __init__.py  catalog.py  cli.py  distortion.py  error.py  platescale.py  pointing.py  simulate.py  util.py  visualize.py
thuban/tests/: test_catalog.py  test_distortion.py
