[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "thuban"
dynamic = ["version"]
dependencies = ["numpy",
    "astropy",
    "matplotlib",
    "pandas",
    "sep-pjw",
    "scipy",
    "scikit-learn",
    "lmfit",
    "tqdm",
    "click"
]
requires-python = ">=3.9"
authors = [
    {name = "J. Marcus Hughes", email = "hughes.jmb@gmail.com"},
]
maintainers = [
  {name = "J. Marcus Hughes", email = "hughes.jmb@gmail.com"}
]
description = "High precision and accuracy astrometric image solving from a guess"
readme = "README.md"
license = {file = "LICENSE.md"}
keywords = ["thuban", "solar", "physics", "analysis", "astrometry", "astronomy"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[project.optional-dependencies]
test = ["pytest", "pytest-doctestplus", "pytest-cov", "ruff", "coverage"]
docs = ["sphinx", "sphinx-autoapi", "sphinx-automodapi", "pydata-sphinx-theme", "sphinx-favicon", "ipython", "packaging"]

[project.scripts]
thuban = "thuban.cli:determine_pointing_and_distortion"

[project.urls]
Homepage = "https://example.com"
Documentation = "https://readthedocs.org"
Repository = "https://github.com/punch-mission/thuban.git"
"Bug Tracker" = "https://github.com/punch-mission/thuban/issues"
Changelog = "https://github.com/punch-mission/thuban/blob/main/CHANGELOG.md"

[tool.setuptools_scm]

[tool.setuptools]
packages = ["thuban"]

[tool.codespell]
skip = "*.fts,*.fits,venv,*.pro,*.asdf,*.ipynb"

[tool.ruff]
target-version = "py39"
line-length = 120
exclude=[
    ".git,",
    "__pycache__",
    "build",
    "thuban/version.py",
]
show-fixes = true

lint.select = [
       "E",
       "F",
       "W",
       "UP",
       "PT",
       "RET",
       "TID",
]

[tool.ruff.lint.per-file-ignores]
# Part of configuration, not a package.
"setup.py" = ["INP001"]
"conftest.py" = ["INP001"]
# implicit-namespace-package. The examples are not a package.
"docs/*.py" = ["INP001"]
# Module level imports do not need to be at the top of a file here
"docs/conf.py" = ["E402"]

"__init__.py" = ["E402", "F401", "F403"]
"test_*.py" = ["B011", "D", "E402", "PGH001", "S101"]


[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pytest.ini_options]
markers = [
    "slow: a slow test to normally skip in CI",
]
